Implemented selectHitch and approveHitch methods (new version) for manager order; made some changes